--- a/html-cs-kadai_013/index.html
+++ b/html-cs-kadai_013/index.html
@@ -16,7 +16,7 @@
     <a href="index.html" id="logo-sp"><img src="images/logo.png" alt="トップページに戻る" /></a>
 
     <!-- PC用ナビゲーション -->
-    <nav id="nav-pc">
+    <nav id="nav-pc">+
       <a href="index.html#concept">CONCEPT</a>
       <a href="index.html#product">PRODUCT</a>
       <a href="index.html#contact">CONTACT</a>
