--- a/html-cs-kadai_013/index.html
+++ b/html-cs-kadai_013/index.html
@@ -32,6 +32,8 @@
       <button id="close" onclick="document.getElementById('nav-sp').style.display = 'none'">
         <img src="images/button-close.png" alt="ナビゲーションを閉じる">
       </button>
+
+      <a href="index.html" id="logo-sp"><img src="images/logo-sp.png" alt="トップページに戻る" /></a>
       <nav>
         <ul>
 
