--- a/kadai_tutorial_output/index.html
+++ b/kadai_tutorial_output/index.html
@@ -402,7 +402,7 @@
     <div id="sns-footer">
       <div class="sns-dtms">
         <a href="https://www.facebook.com/sejuku2013"><img src="images/button-facebook.png" alt="facebookのリンク">
-          <a href="https://www.twtter.com/samuraijuku"><img src="images/button-twitter.png" alt="twtterのリンク">
+          <a href="https://twitter.com/samuraijuku"><img src="images/button-twitter.png" alt="twtterのリンク">
             <a href="https://www.youtube.com/channel/UCCFOQO5aDK0xXam4cUQXT8g"><img src="images/button-youtube.png"
                 alt=YouTubeのリンク">
       </div>
